<resources>
    <string name="app_name">PrioritEase</string>
    <string name="view_by_priority">View Tasks by Priority</string>
    <string name="view_list_button">View All Tasks</string>
    <string name="new_task_button">Add New Task</string>
    <string name="add_task_title">PrioritEase: Add Task</string>
    <string name="view_list_title">PrioritEase: View Tasks</string>
    <string name="task_name">Task Name:</string>
    <string name="task_name_hint">Task Name</string>
    <string name="task_details_hint">Task Details</string>
    <string name="important_urgent">Important/Urgent</string>
    <string name="unimportant_urgent">Unimportant/Urgent</string>
    <string name="important_nonurgent">Important/Non-urgent</string>
    <string name="unimportant_nonurgent">Unimportant/Non-urgent</string>
    <string name="submit_new_task">Add Task</string>
    <string name="menu_view_list">View All Tasks</string>
    <string name="menu_add_task">Add New Task</string>
    <string name="menu_view_matrix">View Tasks by Priority</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="task_details_label">PrioritEase: Task Details</string>
    <string name="save_changes_button">Save Changes</string>
    <string name="edit_task_title">PrioritEase: Edit Task</string>
    <string name="name_header">Task Name</string>
    <string name="priority_header">Priority</string>
    <string name="status_header">Status</string>
    <string name="to_do">To Do</string>
    <string name="in_progress">In Progress</string>
    <string name="complete">Complete</string>
    <string name="sort">Sort</string>
    <string name="details">Details:</string>
    <string name="spinner_label">Task Priority</string>
    <string name="prioritease_icon">prioritease_icon</string>
    <string-array name="priorities_array">
        <item>Important/Urgent</item>
        <item>Important/Non-urgent</item>
        <item>Unimportant/Urgent</item>
        <item>Unimportant/Non-urgent</item>
    </string-array>
    <string-array name="edit_priorities_array">
        <item>-----------Select-----------</item>
        <item>Important/Urgent</item>
        <item>Important/Non-urgent</item>
        <item>Unimportant/Urgent</item>
        <item>Unimportant/Non-urgent</item>
    </string-array>
</resources>
